# grimoire

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
docs/superpowers/plans/: 2026-05-23-library-node-store.md  2026-05-24-codebase-api.md  2026-05-24-tagged-kv-database.md  2026-05-25-codebase-ingestion.md  2026-05-25-codebase-mcp.md
docs/superpowers/specs/: 2026-05-23-library-node-store-design.md  2026-05-24-codebase-api-design.md  2026-05-24-tagged-kv-database-design.md  2026-05-24-vector-kv-search-design.md  2026-05-25-codebase-ingestion-design.md  2026-05-25-codebase-mcp-design.md
hooks/: grimoire_prompt_reminder.py
src/api/: __init__.py  codebase.py  errors.py  search_system.py
src/codebase_mcp/: README.md  __init__.py  __main__.py  config.py  scratch.py  server.py  workspace.py
src/codebase_mcp/ingest/: __init__.py  prompt.py  sandbox.py  survey.py
src/grimoire/api/: __init__.py  codebase.py  results.py  search_system.py
src/grimoire/codebase_mcp/: README.md  __init__.py  __main__.py  scratch.py  server.py  workspace.py
src/grimoire/codebase_mcp/ingest/: __init__.py  sandbox.py  (+1 more)
src/grimoire/search/: __init__.py  _base.py  embedder.py  kvdb.py  pages.py  tagged_kvdb.py
src/search/: __init__.py  _base.py  kvdb.py  tagged_kvdb.py
tests/: conftest.py
tests/api/: test_codebase_bootstrap.py  test_codebase_define.py  test_codebase_folders.py  test_codebase_implement.py  test_codebase_is_tool.py  test_codebase_policies.py  test_codebase_rebuild.py  test_codebase_search.py  test_codebase_searchable.py  test_errors.py  test_results.py  test_search_paging.py  test_search_system.py
tests/codebase_mcp/: test_config.py  test_integration.py  test_scratch.py  test_server.py  test_workspace_build.py  test_workspace_read.py  test_workspace_refactor.py
tests/codebase_mcp/ingest/: test_prompt.py  test_read.py  test_sandbox.py  test_server_ingest.py  test_survey.py  test_workspace_ingest.py
tests/search/: conftest.py  test_embedder.py  test_kvdb.py  test_kvdb_concurrency.py  test_search_filtered.py  test_tagged_kvdb.py  test_tagged_kvdb_keyed.py  test_update_tags.py
