[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haymanbot-library"
version = "0.1.0"
description = "Node graph + disk store + cache + incremental builder."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "tiktoken>=0.6",
    "sentence-transformers>=2.7",
    "hnswlib>=0.8",
    "mcp>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-json-report>=1.5",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["library*", "search*", "api*", "codebase_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
