[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grimoire"
version = "0.1.0"
description = "An MCP server giving Claude a persistent, test-gated, semantically-searchable library of reusable code it can grow, compose, and run."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Oliver Hayman", email = "oliverthehayman@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "claude", "llm", "code-library", "agent-tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy>=1.26",
    "tiktoken>=0.6",
    "sentence-transformers>=2.7",
    "hnswlib>=0.8",
    "mcp>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-json-report>=1.5"]

[project.scripts]
grimoire = "codebase_mcp.server:main"

[project.urls]
Homepage = "https://github.com/oh54321/grimoire"
Repository = "https://github.com/oh54321/grimoire"

[tool.setuptools.packages.find]
where = ["src"]
include = ["library*", "search*", "api*", "codebase_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
